ensure creation of data/chars directory; add verticle scroll to decision window if too large

--- a/public/css/choose.less
+++ b/public/css/choose.less
@@ -19,15 +19,19 @@
 	}
 }
 
-.modal-body .list-group-item {
-	cursor: pointer;
-	&:hover {
-		color: #555;
-		text-decoration: none;
-		background-color: #f5f5f5;
-	}
-	input[type=checkbox] {
-		display: none;
+.modal-body {
+	max-height: 500px;
+	overflow-y: scroll;
+	.list-group-item {
+		cursor: pointer;
+		&:hover {
+			color: #555;
+			text-decoration: none;
+			background-color: #f5f5f5;
+		}
+		input[type=checkbox] {
+			display: none;
+		}
 	}
 }
 
